
 * Check for fast-forward during pull. (Jelmer Vernooĳ, #666)

 * Return a SendPackResult object from
   GitClient.send_pack(). (Jelmer Vernooĳ)

 * ``GitClient.send_pack`` now sets the ``ref_status`` attribute
   on its return value to a dictionary mapping ref names
   to error messages. Previously, it raised UpdateRefsError
   if any of the refs failed to update.
   (Jelmer Vernooĳ, #780)

0.20.3	2020-06-14

 * Add support for remembering remote refs after push/pull.
   (Jelmer Vernooĳ, #752)

 * Support passing tree and output encoding to
   dulwich.patch.unified_diff. (Jelmer Vernooĳ, #763)

 * Fix pushing of new refs over HTTP(S) when there are
   no new objects to be sent.
   (Jelmer Vernooĳ, #739)

 * Raise new error HTTPUnauthorized when the server sends
   back a 401. The client can then retry with credentials.
   (Jelmer Vernooĳ, #691)

 * Move the guts of bin/dulwich to dulwich.cli, so it is easier to
   test or import. (Jelmer Vernooĳ)

 * Install dulwich script from entry_points when setuptools is available,
   making it slightly easier to use on Windows. (Jelmer Vernooĳ, #540)

 * Set python_requires>=3.5 in setup.py. (Manuel Jacob)

0.20.2	2020-06-01

 * Brown bag release to fix uploads of Windows wheels.

0.20.1	2020-06-01

 * Publish binary wheels for: Windows, Linux, Mac OS X.
   (Jelmer Vernooĳ, #711, #710, #629)

0.20.0	2020-06-01

 * Drop support for Python 2. (Jelmer Vernooĳ)

 * Only return files from the loose store that look like git objects.
   (Nicolas Dandrimont)

 * Ignore agent= capability if sent by client.
   (Jelmer Vernooĳ)

 * Don't break when encountering block devices.
   (Jelmer Vernooĳ)

 * Decode URL paths in HttpGitClient using utf-8 rather than file system
   encoding. (Manuel Jacob)

 * Fix pushing from a shallow clone.
   (Brecht Machiels, #705)

0.19.16	2020-04-17

 * Don't send "deepen None" to server if graph walker
   supports shallow. (Jelmer Vernooĳ, #747)

 * Support tweaking the compression level for